 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   	android:layout_width="fill_parent"
 	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:background="#FFD08063">
		<LinearLayout 
	    android:layout_weight="0"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:background="#FFB34730" 
	    android:padding="5dp" 
	    android:gravity="center"
	    android:orientation="horizontal"
	    android:layout_marginTop="0dp"> 
	    	<TextView
	    	    android:id="@+id/title"
	    	    android:layout_width="wrap_content"
	    	    android:layout_height="wrap_content"
	    	    android:text="@string/titre"
	    	    android:textColor="#FFFFFFFF"
	    	    android:textStyle="bold"
	    	    android:textSize="26sp" />
		</LinearLayout>
    	<ScrollView 
    	            android:gravity="center_horizontal|center_vertical" 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
	    android:layout_marginTop="4dp"
	    android:background="#FFEFEDE4">

    	    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
			    android:id="@+id/layout"
			      android:layout_marginTop="14dp"
			      android:gravity="center"
			    android:layout_width="fill_parent"
			    android:layout_height="fill_parent"
			    android:stretchColumns="1">
			    <LinearLayout 
			        android:layout_marginTop="30dp"
			        android:id="@+id/linearLayout1" 
			       	android:layout_width="wrap_content" 
			       	android:layout_height="wrap_content">
			        <Button
			             android:textColor="#FFB34730"
	    	    android:textStyle="bold"
	    	    android:id="@+id/qsn"
			            android:layout_width="fill_parent"
			            android:layout_height="fill_parent"
			            android:layout_weight="2"
			            android:background="@null"
			            android:drawableTop="@drawable/qsn"
			            android:text="@string/qsn"
			            android:onClick="qsn" >
					</Button>
			        <Button  
			             android:textColor="#FFB34730"
	    	    android:textStyle="bold"
	    	    android:id="@+id/adh"
			            android:layout_width="fill_parent"
			            android:layout_height="fill_parent"
			            android:layout_weight="2"
			            android:background="@null"
			            android:drawableTop="@drawable/com"
			            android:text="@string/adh">
			        </Button>
			    </LinearLayout>
			   <LinearLayout 
			        android:layout_marginTop="30dp"
			        android:id="@+id/linearLayout2" 
			       	android:layout_width="wrap_content" 
			       	android:layout_height="wrap_content">
			        <Button
			            android:textColor="#FFB34730"
	    	    android:textStyle="bold"
	    	     android:id="@+id/plan"
			            android:layout_width="fill_parent"
			            android:layout_height="fill_parent"
			            android:layout_weight="2"
			            android:background="@null"
			            android:drawableTop="@drawable/plan"
			            android:text="@string/plan" >
					</Button>
			        <Button  
			             android:textColor="#FFB34730"
	    	    android:textStyle="bold"
	    	    android:id="@+id/phone"
			            android:layout_width="fill_parent"
			            android:layout_height="fill_parent"
			            android:layout_weight="2"
			            android:background="@null"
			            android:drawableTop="@drawable/phone"
			            android:text="@string/phone">
			        </Button>
			    </LinearLayout>
			      <LinearLayout 
			        android:layout_marginTop="30dp"
			        android:id="@+id/linearLayout3" 
			       	android:layout_width="wrap_content" 
			       	android:layout_height="wrap_content">
			        <Button
			             android:textColor="#FFB34730"
	    	    android:textStyle="bold"
	    	    android:id="@+id/calendar"
			            android:layout_width="fill_parent"
			            android:layout_height="fill_parent"
			            android:layout_weight="2"
			            android:background="@null"
			            android:drawableTop="@drawable/calendar"
			            android:text="@string/calendar" >
					</Button>
			        <Button  
			            android:id="@+id/hours"
			            android:textColor="#FFB34730"
	    	    android:textStyle="bold"
			            android:layout_width="fill_parent"
			            android:layout_height="fill_parent"
			            android:layout_weight="2"
			            android:background="@null"
			            android:drawableTop="@drawable/hours"
			            android:text="@string/hours">
			        </Button>
			    </LinearLayout>
			</TableLayout>    
		</ScrollView> 
</LinearLayout>
    		