 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   	android:layout_width="fill_parent"
 	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:background="#FFD08063">
		<LinearLayout 
	    android:layout_weight="0"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:background="#FFB34730" 
	    android:padding="5dp" 
	    android:gravity="center"
	    android:orientation="horizontal"
	    android:layout_marginTop="0dp"> 

	    	<TextView
	    	    android:id="@+id/title"
	    	    android:layout_width="wrap_content"
	    	    android:layout_height="wrap_content"
	    	    android:text="@string/titre"
	    	    android:textColor="#FFFFFFFF"
	    	    android:textStyle="bold"
	    	    android:textSize="26sp" />

		</LinearLayout>
		<LinearLayout
		    	    android:layout_weight="0"
		     android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    
	    android:background="#FFFFFFFF"
	    android:padding="5dp" 
	    android:gravity="center"
	    android:orientation="horizontal"
	    android:layout_marginTop="0dp">
		<TextView
    android:id="@+id/title"
	    	    android:layout_width="wrap_content"
	    	    android:layout_height="wrap_content"
	    	    android:text="@string/message_start"
	    	    android:textColor="#FFB34730"
	    	    android:textStyle="bold"
	    	    android:textSize="12sp" 
    />    
		</LinearLayout>
    	<ScrollView 
    	            android:gravity="center_horizontal|center_vertical"
    	    
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
	    android:layout_marginTop="4dp"
	    android:background="#FFFFFFFF">

    	    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
			    android:id="@+id/layout"
			      android:layout_marginTop="14dp"
			      android:gravity="center"
			    android:layout_width="fill_parent"
			    android:layout_height="fill_parent"
			    android:stretchColumns="1">
			    <LinearLayout 
			        android:layout_marginTop="30dp"
			        android:id="@+id/linearLayout1" 
			       	android:layout_width="wrap_content" 
			       	android:layout_height="wrap_content">
			        <Button
			             android:textColor="#FFB34730"
	    	    android:textStyle="bold"
	    	    android:textSize="12sp" 
			            android:id="@+id/inpulsion"
			            android:layout_width="fill_parent"
			            android:layout_height="fill_parent"
			            android:layout_weight="2"
			            android:background="@null"
			            android:drawableTop="@drawable/inpulsion"
			            android:text="@string/inpulsion">
					</Button>
			        <Button  
			             android:textColor="#FFB34730"
	    	    android:textStyle="bold"
	    	    android:textSize="12sp" 
			            android:id="@+id/umu"
			            android:layout_width="fill_parent"
			            android:layout_height="fill_parent"
			            android:layout_weight="2"
			            android:background="@null"
			            android:drawableTop="@drawable/umu"
			            android:text="@string/umu">
			        </Button>
			    </LinearLayout>
			   <LinearLayout 
			        android:layout_marginTop="30dp"
			        android:id="@+id/linearLayout2" 
			       	android:layout_width="wrap_content" 
			       	android:layout_height="wrap_content">
			        <Button
			             android:textColor="#FFB34730"
	    	    android:textStyle="bold"
	    	    android:textSize="12sp" 
			            android:id="@+id/mozci"
			            android:layout_width="fill_parent"
			            android:layout_height="fill_parent"
			            android:layout_weight="2"
			            android:background="@null"
			            android:drawableTop="@drawable/mozci"
			            android:text="@string/mozci" >
					</Button>
			       
			    </LinearLayout>
			     
			</TableLayout>    
		</ScrollView> 
<Button
			  	    	    android:textColor="#FFFFFFFF"
			  
    		    android:padding="5dp" 
    		    android:textSize="20sp" 
			  android:background="#FFB34730" 
			    android:id="@+id/clickHome"
			    style="?android:attr/buttonStyleSmall"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:text="@string/backhome" />

</LinearLayout>
    		