 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   	android:layout_width="fill_parent"
 	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:background="#FFD08063">
		<LinearLayout 
	    android:layout_weight="0"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:background="#FFB34730" 
	    android:padding="5dp" 
	    android:gravity="center"
	    android:orientation="horizontal"
	    android:layout_marginTop="0dp">

	    	<TextView
	    	    android:id="@+id/title"
	    	    android:layout_width="wrap_content"
	    	    android:layout_height="wrap_content"
	    	    android:text="@string/adh"
	    	    android:textColor="#FFFFFFFF"
	    	    android:textStyle="bold"
	    	    android:gravity="center"
	    	    android:layout_gravity="center"
	    	    android:textSize="26sp" />

		</LinearLayout>
    	<ScrollView 
    	android:gravity="center_horizontal|center_vertical"    
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
	    android:layout_marginTop="4dp"
	    android:background="#FFEFEDE4">

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/messageintro"
        android:text="@string/ctc"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/sujet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sujet: "
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText android:id="@+id/etSubject"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView
        android:id="@+id/msgsujet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Message: "
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText android:id="@+id/etMessage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:lines="6"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <Button android:id="@+id/btnOK"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Envoyer"
         android:padding="5dp" 
    	android:textSize="20sp" 
		android:background="#FFD08063" 
		android:layout_marginTop="4dp"
		android:layout_marginBottom="4dp"
		android:textColor="#FFFFFFFF"
        android:textAppearance="?android:attr/textAppearanceMedium" />
</LinearLayout>
    	    
		</ScrollView> 
<Button
			  	    	    android:textColor="#FFFFFFFF"
			  
    		    android:padding="5dp" 
    		    android:textSize="20sp" 
			  android:background="#FFB34730" 
			    android:id="@+id/clickHome"
			    style="?android:attr/buttonStyleSmall"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:text="@string/backhome" />

</LinearLayout>
    		